<resources>
    <string name="app_name">LyricsApp</string>
    <string name="navigation_drawer_open">Otevřít menu</string>
    <string name="navigation_drawer_close">Zavřít menu</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="hint_login_username">Uživatelské jméno</string>
    <string name="hint_login_password">Heslo</string>
    <string name="open_register_login">Ještě nemáte účet?</string>
    <string name="button_login">Přihlásit se</string>

    <string name="hint_register_username">Uživatelské jméno</string>
    <string name="hint_register_password">Heslo</string>
    <string name="hint_register_email">Email</string>
    <string name="hint_register_confirm_password">Potvrzení hesla</string>
    <string name="button_register">Registrovat se</string>

    <string name="search_songs_title">Písně</string>
    <string name="search_artists_title">Umělci</string>
    <string name="search_show_all_songs">Zobrazit všechny písničky</string>

    <string name="nothing_here_aritsts">V oblíbených nemáte žádné umělce</string>
    <string name="nothing_here_songs">V oblíbených nemáte žádné písničky</string>

    <string name="nothing_found">Omlouváme se, ale pro daný výraz nebyli nalezeny žádné výsledky</string>
    <string name="nothing_found_songs">Omlouváme se, ale pro daný výraz nebyl nalezeny žádné skladby</string>
    <string name="nothing_found_artists">Omlouváme se, ale pro daný výraz nebyl nalezeny žádní umělci</string>

    <string name="search_hint">Hledejte své oblíbené umělce nebo skladby</string>

    <string name="no_internet_header">Připojení ztraceno</string>
    <string name="no_internet_text">Jste offline zkontrolujte prosím vaše internetové připojení a zkuste to znovu</string>

    <string-array name="spinner1">
        <item>Top písničky</item>
        <item>Top Rock</item>
        <item>Top Counry</item>
        <item>Top Pop</item>
    </string-array>
</resources>