<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollViewSearch">

<!--    <include layout="@layout/nothing_found_search"/>-->

    <LinearLayout
        android:id="@+id/searchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:id="@+id/textSongsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:text="@string/search_songs_title"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/search_list_view_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/showMoreSongs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="end"
            android:paddingRight="20dp"
            android:text="@string/search_show_all_songs"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textArtistListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dp"
            android:paddingLeft="20dp"
            android:text="@string/search_artists_title"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/search_list_view_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <TextView
            android:id="@+id/showMoreArtist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="end"
            android:paddingRight="20dp"
            android:text="@string/search_show_all_songs"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
